fixed duplicate ids

--- a/index.html
+++ b/index.html
@@ -30,30 +30,30 @@
       <div class="switchboard">
         <div class="row">
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio1">Triassic</label>
+            <input type="radio" id="Triassic" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Triassic">Triassic</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio2">Jurassic</label>
+            <input type="radio" id="Jurassic" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Jurassic">Jurassic</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio3">Cretaceous</label>
+            <input type="radio" id="Cretaceous" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Cretaceous">Cretaceous</label>
           </div>
         </div>
         <div class="row">
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio1">Carnivore</label>
+            <input type="radio" id="Carnivore" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Carnivore">Carnivore</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio2">Herbivore</label>
+            <input type="radio" id="Herbivore" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Herbivore">Herbivore</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label" for="customRadio3">Omnivore</label>
+            <input type="radio" id="Omnivore" name="customRadio" class="custom-control-input">
+            <label class="custom-control-label" for="Omnivore">Omnivore</label>
           </div>
         </div>
         <div class="row">
